src/objects/Test_step1__c.object
<CustomObject>
    <description>PMO: Test Management. Store all test Steps that based on Test Case.（Edition2）
Responsible person：Samuel Liu</description>
    <fields>
        <fullName>Actual_Results__c</fullName>
        <label>Actual Results</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <label>Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Results__c</fullName>
        <label>Expected Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Cases1__c</fullName>
        <label>Test Cases1</label>
        <referenceTo>Test_Cases1__c</referenceTo>
        <relationshipLabel>Test steps</relationshipLabel>
        <relationshipName>Test_steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Test step1</label>
    <nameField>
        <label>Step No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>